<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    android:background="@color/Surface"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_view_1"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:elevation="16dp"
        android:background="@color/App_Bar"
        android:src="@drawable/salem"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name" />
    <TextView
        android:id="@+id/textView_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_txt_1"
        android:textColor="@color/white"
        android:elevation="17dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/textView_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_txt_2"
        android:textColor="@color/white"
        android:elevation="17dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:layout_marginTop="120dp"
        android:layout_marginStart="30dp"/>

    <RelativeLayout
        android:id="@+id/l_lay_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_view_1"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/city_1_btn"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:elevation="20dp"
            android:src="@drawable/chennai_small"
            android:contentDescription="@string/app_name" />

        <ImageButton
            android:id="@+id/city_2_btn"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_toEndOf="@id/city_1_btn"
            android:layout_marginStart="40dp"
            android:elevation="20dp"
            android:background="@drawable/trichy_small"
            android:contentDescription="@string/app_name" />

        <ImageButton
            android:id="@+id/city_3_btn"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_below="@id/city_1_btn"
            android:layout_marginTop="40dp"
            android:elevation="20dp"
            android:background="@drawable/coimbatore_small"
            android:contentDescription="@string/app_name" />

        <ImageButton
            android:id="@+id/city_4_btn"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_below="@id/city_2_btn"
            android:layout_toEndOf="@id/city_3_btn"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:elevation="20dp"
            android:background="@drawable/madurai_small"
            android:contentDescription="@string/app_name" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/l_lay_1"
        android:layout_marginTop="15dp"
        android:text="@string/select_any_one_of_them"
        android:textColor="@color/Cards"
        android:textSize="16sp"/>

</RelativeLayout>